--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "type": "git",
     "url": "https://github.com/Hector3008/backend-coderhouse"
   },
-  
-  "keywords": ["backend"],
+  "keywords": [
+    "backend"
+  ],
   "author": "hector hosep",
   "license": "ISC",
-
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
     "mongoose": "^7.3.0",
     "mongoose-paginate-v2": "^1.7.1",
     "socket.io": "^4.6.2"
