--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "hector hosep",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
