ingeniería de express en otro documento

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=8080
 MONGO_DB_ADMIN_NAME=admin
 MONGO_DB_CLOUD_ADMIN_DB=LHHv7KiR2v7XPDja
 MONGO_DB_NAME=e-comerce
-
+ADMIN_EMAIL=adminCoder@coder.com
+ADMIN_PASSWORD=adminCod3r123
 MONGO_URI=mongodb+srv://${MONGO_DB_ADMIN_NAME}:${MONGO_DB_CLOUD_ADMIN_DB}@e-comerce.bpmaosh.mongodb.net/
-
 SESSION_SIGN=secret
