controladores de html methods (API)

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ ADMIN_EMAIL=adminCoder@coder.com
 ADMIN_PASSWORD=adminCod3r123
 MONGO_URI=mongodb+srv://${MONGO_DB_ADMIN_NAME}:${MONGO_DB_CLOUD_ADMIN_DB}@e-comerce.bpmaosh.mongodb.net/
 SESSION_SIGN=secret
+PERSISTENCE=mongo
