--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "mailgen": "^2.0.28",
     "mongoose": "^7.3.0",
     "mongoose-paginate-v2": "^1.7.1",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "twilio": "^4.19.0"
   }
 }
