implemento de mocking para entregable

--- a/.env
+++ b/.env
@@ -7,8 +7,12 @@ ADMIN_PASSWORD=adminCod3r123
 MONGO_URI=mongodb+srv://${MONGO_DB_ADMIN_NAME}:${MONGO_DB_CLOUD_ADMIN_DB}@e-comerce.bpmaosh.mongodb.net/
 SESSION_SIGN=secret
 PERSISTENCE=mongo
+
 NODEMAILER_EMAIL=hectorh3008@gmail.com
-NODEMAILER_PASSWORD=tqvy axnh dext qtse
+NODEMAILER_PASSWORD=pnuztsldehztbwcy
+
+
+
 TWILIO_ACCOUNT_SID=ACf2ad062be52f43af9e9ae5150fae2487
 TWILIO_AUTH_TOKEN=d335f1804d2e1bdf90da8fa1387e381e
 TWILIO_AUTH_TLF=+12622924744
