--- a/.env
+++ b/.env
@@ -7,11 +7,10 @@ ADMIN_PASSWORD=adminCod3r123
 MONGO_URI=mongodb+srv://${MONGO_DB_ADMIN_NAME}:${MONGO_DB_CLOUD_ADMIN_DB}@e-comerce.bpmaosh.mongodb.net/
 SESSION_SIGN=secret
 PERSISTENCE=mongo
+ENVIRONMENT=TEST
 
 NODEMAILER_EMAIL=hectorh3008@gmail.com
 NODEMAILER_PASSWORD=pnuztsldehztbwcy
-
-
 
 TWILIO_ACCOUNT_SID=ACf2ad062be52f43af9e9ae5150fae2487
 TWILIO_AUTH_TOKEN=d335f1804d2e1bdf90da8fa1387e381e
