--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mailgen": "^2.0.28",
     "mongoose": "^7.3.0",
     "mongoose-paginate-v2": "^1.7.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "passport": "^0.6.0",
