--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "mailgen": "^2.0.28",
+    "moment": "^2.30.1",
     "mongoose": "^7.3.0",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
